--- a/My CSS CheatSheet.css
+++ b/My CSS CheatSheet.css
@@ -1,11 +1,15 @@
- Dev.BUSHRA CSS CheatSheet 
-
+|
+|
+|   Dev.BUSHRA CSS CheatSheet
+|
+| 
 |------------------------------------------------------------------------------------
-|       All CSS Properties       www.w3schools.com/css/css3_2dtransforms.asp 
+|                              All CSS Properties                                   |
+|                      www.w3schools.com/css/css3_2dtransforms.asp                  |
 |------------------------------------------------------------------------------------
 |
-|[Animation] 
-|    
+|
+|   [Animation] 
 |   animation                    binds an animation to an element 
 |   animation-delay              delays animation start 
 |   animation-direction          reverse animation or in alternate cycles 
@@ -16,9 +20,47 @@
 |   animation-play-state         the animation is running or paused 
 |   animation-timing-function    speed curve of an animation 
 |   backface-visibility          is element visible when not facing the screen 
+|   @keyframes                   specifies the animation code {}
 |
-|[Background] 
-|   
+|   [Align] 
+|   align-content       behavior of the flex-wrap property 
+|   align-items         alignment of items inside the container 
+|   align-self          alignment of the selected item 
+|
+|   [Justify]
+|   justify-content     justifies flexible container's items horizontally if necessary 
+|   justify-item        set on the grid container to give child elements (grid items) alignment in the inline direction. 
+|   justify-self        aligns a grid item within its grid cell in the inline direction. 
+|
+|   [Flex] 
+|   flex-basis       initial length of a flexible item 
+|   flex-direction   direction of the flexible items    
+|   flex-flow        shorthand for flex-direction and flex-wrap 
+|   flex-grow        how much the item will grow relative other items 
+|   flex-shrink      how to shrink the item relative to other items 
+|   flex-wrap        wrap flexible items 
+|
+|   [Grid] 
+|   grid-area                    Either specifies a "name for the grid item", or this property is a shorthand property for the "grid-row-start, grid-column-start, grid-row-end, and grid-column-end" properties 
+|   grid-auto-columns	         Specifies a "default column size" 
+|   grid-auto-flow	             Specifies how auto-placed items are inserted in the grid 
+|   grid-auto-rows	             Specifies a "default row size" 
+|   grid-column	                 A shorthand property for the "grid-column-start and the grid-column-end" properties 
+|   grid-column-end	             Specifies "where to end the grid item" 
+|   grid-column-gap	             Specifies the "size of the gap between columns" 
+|   grid-column-start	         Specifies "where to start the grid item" 
+|   grid-gap	                 A shorthand property for the "grid-row-gap and grid-column-gap" properties 
+|   gap	                         A shorthand property for the "row-gap and the column-gap" properties 
+|   grid-row	                 A shorthand property for the "grid-row-start and the grid-row-end" properties 
+|   grid-row-end	             Specifies "where to end the grid item" 
+|   grid-row-gap	             Specifies the "size of the gap between rows" 
+|   grid-row-start	             Specifies "where to start the grid item" 
+|   grid-template	             A shorthand property for the "grid-template-rows, grid-template-columns and grid-areas" properties 
+|   grid-template-areas	         Specifies "how to display columns and rows", using named grid items 
+|   grid-template-columns	     Specifies the "size of the columns, and how many columns in a grid layout" 
+|   grid-template-rows	         Specifies the "size of the rows in a grid layout" 
+|
+|   [Background] 
 |   background               all bg properties in one declaration 
 |   background-attachment    is the bg image scroll/ fixed/ local 
 |   background-blend-mode    blend mode of each bg layer 
@@ -28,8 +70,7 @@
 |   background-repate        bg image repeated no/ repeat/ repeat-x/ repeat-y 
 |   background-size          bg image size 
 |
-|[Border]
-|   
+|   [Border]
 |   border                       set border properties 
 |   border-bottom                bottom border properties in one line 
 |   border-bottom-color          color of the bottom border 
@@ -64,8 +105,7 @@
 |   border-top-width             border top width 
 |   border-width                 border width 
 |   
-|[Column] 
-|   
+|   [Column] 
 |   columns              set column-width and column-count 
 |   column-count         divide the content in columns 
 |   column-fill          balanced fill or not 
@@ -77,8 +117,7 @@
 |   column-span          column span 
 |   column-width         column width 
 |
-|[Font] 
-|   
+|   [Font] 
 |   font                 all font properties in one line 
 |   @font-face           declare non-web-safe fonts {}
 |   font-family          font of the element 
@@ -89,61 +128,25 @@
 |   font-variant         set small-caps 
 |   font-weight          use bold or thin characters 
 |
-|[List] 
-|
+|   [List] 
 |   list-style           all list properties in one line 
 |   list-style-image     replace the list item marker with an image 
 |   list-style-position  list item markers inside or outside the content flow 
 |   list-style-type      set the type of the list item marker 
 |
-|[Margin] 
-|   
-|   margin           set the top, right, bottom and left margins in one line 
-|   margin-bottom    bottom margin 
-|   margin-left      left margin 
-|   margin-right     right margin 
-|   margin-top       margin top 
-|
-|[Padding] 
-|   
-|   padding          padding between the element border and content 
-|   padding-bottom   padding bottom 
-|   padding-left     padding left 
-|   padding-right    padding right 
-|   padding-top      padding top 
-|
-|[Align] 
-|   
-|   align-content    behavior of the flex-wrap property 
-|   align-items      alignment of items inside the container 
-|   align-self       alignment of the selected item 
-|   
-|[Flex] 
-|
-|   flex             item length, relative to others inside the container 
-|   flex-basis       initial length of a flexible item 
-|   flex-direction   direction of the flexible items    
-|   flex-flow        shorthand for flex-direction and flex-wrap 
-|   flex-grow        how much the item will grow relative other items 
-|   flex-shrink      how to shrink the item relative to other items 
-|   flex-wrap        wrap flexible items 
-|
-|[Outline] 
-|
+|   [Outline] 
 |   outline          drow an outer border around elemen 
 |   outline-color    outline color 
 |   outline-offset   gap between the element and the outline 
 |   outline-style    outline style 
 |   outline-width    outline width 
 |   
-|[Overflow] 
-|
+|   [Overflow] 
 |   overflow     hide, display or scroll if the content overflows its container 
 |   overflow-x   horizontal overflow 
 |   overflow-y   vertical overflow 
 |
-|[Text] 
-|
+|   [Text] 
 |   text-align       horizontal alignment of text 
 |   text-align-last  horizontal alignment of last line of tex 
 |   text-decoration  overline, underline or line-through the text 
@@ -152,17 +155,46 @@
 |   text-shadow      text shadow 
 |   text-transform   capitalization of text 
 |
-|[@]
-|   
-|   @keyframes           specifies the animation code {} 
-|   @media             see media queries {}
+|   [Mask] 
+|   mask	            Hides parts of an element by masking or clipping an image at specific places
+|   mask-clip	        Specifies the mask area
+|   mask-composite	    Represents a compositing operation used on the current mask layer with the mask layers below it
+|   mask-image	        Specifies an image to be used as a mask layer for an element
+|   mask-mode	        Specifies whether the mask layer image is treated as a luminance mask or as an alpha mask
+|   mask-origin	        Specifies the origin position (the mask position area) of a mask layer image
+|   mask-position	    Sets the starting position of a mask layer image (relative to the mask position area)
+|   mask-repeat	        Specifies how the mask layer image is repeated
+|   mask-size	        Specifies the size of a mask layer image
+|   mask-type	        Specifies whether an SVG <mask> element is treated as a luminance mask or as an alpha mask
 |
-|[Others]
+|   [Box]
+|   box-shadow           shadow to element 
+|   box-sizing           box sizing properties
+|   box-decoration-break	    Sets the behavior of the background and border of an element at page-break, or, for in-line elements, at line-break.
+|   box-shadow	                Attaches one or more shadows to an element
+|   box-sizing	                Defines how the width and height of an element are calculated: should they include padding and borders, or not
 |
+|   [Break]
+|   break-after	                Specifies whether or not a page-, column-, or region-break should occur after the specified element
+|   break-before	            Specifies whether or not a page-, column-, or region-break should occur before the specified element
+|   break-inside	            Specifies whether or not a page-, column-, or region-break should occur inside the specified element
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|=====================================================================================
+|   [Others]
 |   all                  change all properties 
 |   bottom               bottom offset for relative and absolute elements 
-|   box-shadow           shadow to element 
-|   box-sizing           box sizing properties 
+ 
 |   caption-side         placement of a table caption 
 |   clear                deny floating of an element 
 |   clip                 clip an absolutely positioned element 
@@ -178,7 +210,7 @@
 |   float                float elements left or right 
 |   hanging-punctuation  can a punctuation mark be placed outside the line box? 
 |   height               height of the element    
-|   justify-content      justifies flexible container's items horizontally if necessary 
+
 |   left                 left offset for relative and absolute elements 
 |   letter-spacing       space between characters 
 |   line-height          line height of text or inline-block elements 
@@ -269,12 +301,6 @@ border-top-style	        Sets the style of the top border
 border-top-width	        Sets the width of the top border
 border-width	            Sets the width of the four borders
 bottom	                    Sets the elements position, from the bottom of its parent element
-box-decoration-break	    Sets the behavior of the background and border of an element at page-break, or, for in-line elements, at line-break.
-box-shadow	                Attaches one or more shadows to an element
-box-sizing	                Defines how the width and height of an element are calculated: should they include padding and borders, or not
-break-after	                Specifies whether or not a page-, column-, or region-break should occur after the specified element
-break-before	            Specifies whether or not a page-, column-, or region-break should occur before the specified element
-break-inside	            Specifies whether or not a page-, column-, or region-break should occur inside the specified element
 
 [C] 
 caption-side	            Specifies the placement of a table caption
@@ -336,27 +362,6 @@ font-variant-numeric	    Controls the usage of alternate glyphs for numbers, fra
 font-variant-position	    Controls the usage of alternate glyphs of smaller size positioned as superscript or subscript regarding the baseline of the font
 font-weight	                Specifies the weight of a font
 
-[G] 
-gap	                         A shorthand property for the "row-gap and the column-gap" properties 
-grid	                     A shorthand property for "the grid-template-rows, grid-template-columns, grid-template-areas, grid-auto-rows, grid-auto-columns, and the grid-auto-flow" properties. 
-grid-area                    Either specifies a "name for the grid item", or this property is a shorthand property for the "grid-row-start, grid-column-start, grid-row-end, and grid-column-end" properties 
-grid-auto-columns	         Specifies a "default column size" 
-grid-auto-flow	             Specifies how auto-placed items are inserted in the grid 
-grid-auto-rows	             Specifies a "default row size" 
-grid-column	                 A shorthand property for the "grid-column-start and the grid-column-end" properties 
-grid-column-end	             Specifies "where to end the grid item" 
-grid-column-gap	             Specifies the "size of the gap between columns" 
-grid-column-start	         Specifies "where to start the grid item" 
-grid-gap	                 A shorthand property for the "grid-row-gap and grid-column-gap" properties 
-grid-row	                 A shorthand property for the "grid-row-start and the grid-row-end" properties 
-grid-row-end	             Specifies "where to end the grid item" 
-grid-row-gap	             Specifies the "size of the gap between rows" 
-grid-row-start	             Specifies "where to start the grid item" 
-grid-template	             A shorthand property for the "grid-template-rows, grid-template-columns and grid-areas" properties 
-grid-template-areas	         Specifies "how to display columns and rows", using named grid items 
-grid-template-columns	     Specifies the "size of the columns, and how many columns in a grid layout" 
-grid-template-rows	         Specifies the "size of the rows in a grid layout" 
-
 [H] 
 hanging-punctuation	         Specifies whether a punctuation character may be placed outside the line box 
 height	                     Sets the height of an element 
@@ -366,12 +371,6 @@ hyphens	                     Sets how to split words to improve the layout of pa
 image-rendering	              Specifies the "type of algorithm to use for image scaling" 
 @import{}	                      Allows you to "import a style sheet" into another style sheet 
 isolation	                  Defines whether an element must create a new stacking content 
-
-[J] 
-justify-content	              Specifies the "alignment between the items inside a flexible container" when the items do not use all available space 
-
-[K] 
-@keyframes{}	                   Specifies the animation code 
 
 [L] 
 left	                        Specifies the left position of a positioned element
@@ -384,11 +383,6 @@ list-style-position	            Specifies the position of the list-item markers 
 list-style-type	                Specifies the type of list-item marker
 
 [M] 
-margin	            Sets all the margin properties in one declaration
-margin-bottom	    Sets the bottom margin of an element
-margin-left	        Sets the left margin of an element
-margin-right	    Sets the right margin of an element
-margin-top	        Sets the top margin of an element
 mask	            Hides parts of an element by masking or clipping an image at specific places
 mask-clip	        Specifies the mask area
 mask-composite	    Represents a compositing operation used on the current mask layer with the mask layers below it
