--- a/css.css
+++ b/css.css
@@ -572,8 +572,25 @@ document.documentElement.style.setProperty('--vh', `${vh}px`);
     margin: 0 auto;
     max-width: 30%;
 }
-    
-/* Media Queries */
+
+
+/* Mixing ****************************************************/
+ - mixin is a reusable block of CSS code that can be included in multiple selectors or other mixins. It allows you to define a set of CSS styles that can be reused throughout your stylesheet, promoting modular and efficient code organization.
+
+ /* create a mixin */
+ @mixin bordered-box($border-color, $border-width) {
+  border: $border-width solid $border-color;
+}
+
+/* use a mixin */
+.box {
+  @include bordered-box(red, 2px);
+}
+
+
+
+
+/* Media Queries ****************************************************/
 - Media queries allow you to create different layouts depend on the size of the viewport.
 
     @media media_type and (exoressions) {
@@ -847,3 +864,200 @@ border-radius: 32px;
     transition-duration: 0;
 }
 /* hover */
+
+
+/* Button lighit effect */
+
+.button-light-effect {
+    background: linear-gradient(90deg, black, white, black);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    animation: shining 4s ease-in-out infinite;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.1);
+    text-fill-color: rgba(255, 255, 255, 0.1);
+}
+@keyframes shining {
+    0% {
+      background-position: -10em;
+    }
+    100% {
+      background-position: 10em;
+    }
+  }
+
+/* Start in Dubai Text Effect */
+
+/* page */
+import ParticleText from "../../components/ParticleText";
+<ParticleText />
+<div />
+/* ParticleText.jsx */
+import React, { useLayoutEffect } from "react";
+
+const ParticleText = () => {
+  const canvasEffect = () => {
+    var can = document.getElementById("canvas");
+    var ctx = can.getContext("2d");
+    can.width = window.innerWidth;
+    can.height = window.innerHeight;
+    can.style.background = "transparent";
+    var p = [];
+    function Clear() {
+      ctx.clearRect(0, 0, can.width, can.height);
+    }
+    var m = { x: -can.width / 2, y: 0, r: 70 };
+    can.onmousemove = function (event) {
+      m.x = event.clientX;
+      m.y = event.clientY;
+    };
+    can.ontouchmove = function (event) {
+      m.x = event.touches[0].clientX;
+      m.y = event.touches[0].clientY;
+    };
+    function Vector(x, y) {
+      this.x = x;
+      if (x == undefined) {
+        this.x = 0;
+      }
+      this.y = y;
+      if (y == undefined) {
+        this.y = 0;
+      }
+      this.mag = function () {
+        return Math.sqrt(this.x ** 2 + this.y ** 2);
+      };
+      this.dir = function () {
+        return Math.atan2(this.y, this.x);
+      };
+      this.add = function (v) {
+        this.x += v.x;
+        this.y += v.y;
+      };
+      this.sub = function (v) {
+        this.x -= v.x;
+        this.y -= v.y;
+      };
+      this.mult = function (n) {
+        this.x *= n;
+        this.y *= n;
+      };
+      this.div = function (n) {
+        this.x /= n;
+        this.y /= n;
+      };
+      this.makeMag = function (m) {
+        if (this.mag() !== 0) {
+          this.div(this.mag());
+          this.mult(m);
+        } else {
+          return;
+        }
+      };
+      this.limit = function (l) {
+        if (this.mag() > l) {
+          this.makeMag(l);
+        } else {
+          return;
+        }
+      };
+      this.connect = function (v) {
+        ctx.beginPath();
+        ctx.moveTo(this.x, this.y);
+        ctx.lineTo(v.x, v.y);
+        ctx.stroke();
+      };
+      this.get = function () {
+        return new Vector(this.x, this.y);
+      };
+    }
+    var PVector = {
+      add: function (v1, v2) {
+        return new Vector(v1.x + v2.x, v1.y + v2.y);
+      },
+      sub: function (v1, v2) {
+        return new Vector(v1.x - v2.x, v1.y - v2.y);
+      },
+    };
+    function particle(x, y, c) {
+      this.pos = new Vector(
+        Math.random() * can.width,
+        Math.random() * can.height
+      );
+      this.vel = new Vector();
+      this.acc = new Vector();
+      var f = 20;
+      var e = 0.05;
+      this.upd = function () {
+        ctx.fillStyle = c;
+        ctx.beginPath();
+        ctx.arc(this.pos.x, this.pos.y, 1, 0, 2 * Math.PI);
+        ctx.fill();
+        ctx.closePath();
+        var push = PVector.sub(this.pos, m);
+        var p = push.mag();
+        push.makeMag(((m.r - p) / m.r) * f);
+        if (
+          Math.sqrt((this.pos.x - m.x) ** 2 + (this.pos.y - m.y) ** 2) < m.r
+        ) {
+          this.vel = push;
+        } else {
+          this.vel = new Vector((x - this.pos.x) * e, (y - this.pos.y) * e);
+        }
+        this.vel.add(this.acc);
+        this.pos.add(this.vel);
+        this.acc.mult(0);
+      };
+    }
+    function gameMake() {
+      var grd = ctx.createLinearGradient(0, 0, can.width, 0);
+      grd.addColorStop(0, "cyan");
+      grd.addColorStop(1, "magenta");
+
+      var h = 90;
+      var text = "Start in Dubai";
+      var w = text.length * 70;
+      ctx.fillStyle = "rgba(0,0,0,0)";
+      ctx.fillRect(0, 0, w, h);
+      ctx.fillStyle = "white";
+      ctx.font = h + "px Arial";
+      ctx.fillText(text, 0, 70);
+      var img = ctx.getImageData(0, 0, w, h);
+      for (var x = 0; x < w; x += 2) {
+        for (var y = 0; y < h; y += 2) {
+          if (img.data[y * 4 * w + x * 4 + 3] > 128) {
+            p.push(
+              new particle(
+                x * 1.5 + can.width / 2 - w / 2,
+                y * 1.5 + can.height / 2 - h / 2,
+                grd
+              )
+            );
+          }
+        }
+      }
+      console.log(p.length);
+    }
+    function gameMove() {
+      requestAnimationFrame(gameMove);
+      Clear();
+      for (var i = 0; i < p.length; i++) {
+        p[i].upd();
+      }
+    }
+    gameMake();
+    gameMove();
+  };
+
+  useLayoutEffect(() => {
+    canvasEffect();
+  }, []);
+  return <canvas id="canvas"></canvas>;
+};
+
+export default ParticleText;
+
+
+
+/*  */
